feature: adds check process

--- a/config/locales/ru.common.yml
+++ b/config/locales/ru.common.yml
@@ -3,3 +3,4 @@ ru:
     please_sign_in: Пожалуйста войдите в систему
     access_denied: Доступ запрещен
     not_found: Не найдено
+    in_progress: В проверке
