--- a/config/locales/ru.activerecord.yml
+++ b/config/locales/ru.activerecord.yml
@@ -6,7 +6,7 @@ ru:
       repository:
         name: Название репозитория
       repository/check:
-        state/created: Создано
-        state/checking: Проверка
-        state/failed: Ошибка
-        state/succeeded: Завершено
+        aasm_state/created: Создано
+        aasm_state/checking: Проверка
+        aasm_state/failed: Ошибка
+        aasm_state/succeeded: Завершено
