fix: review feedback

--- a/config/locales/en.common.yml
+++ b/config/locales/en.common.yml
@@ -1,5 +1,6 @@
 en:
   common:
+    page_title: Code quality
     please_sign_in: Please sign in
     access_denied: Access denied
     not_found: Not found
