--- a/config/locales/ru.common.yml
+++ b/config/locales/ru.common.yml
@@ -1,5 +1,6 @@
 ru:
   common:
+    page_title: Качество кода
     please_sign_in: Пожалуйста войдите в систему
     access_denied: Доступ запрещен
     not_found: Не найдено
